fix: discussion page showing horizontal scroll on iOS

--- a/framework/core/less/common/scaffolding.less
+++ b/framework/core/less/common/scaffolding.less
@@ -6,6 +6,10 @@
   }
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   background: var(--body-bg);
   color: var(--text-color);
